--- a/mods.html
+++ b/mods.html
@@ -201,16 +201,16 @@
 		<div class="progress">
 			<!--
 				total mods:          75    100.00%
-				updated:             54     72.00%
+				updated:             55     73.33%
 				kind-of updated:     4       5.33%
 				kind-of outdated:    0       0.00%
-				outdated:            16     21.33%
+				outdated:            15     20.00%
 				abandoned:           1       1.33%
 			-->
-			<div class="updated" style="width:72%"></div>
+			<div class="updated" style="width:73.5%"></div>
 			<div class="kindof-updated" style="width:5%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:21.5%"></div>
+			<div class="outdated" style="width:20%"></div>
 			<div class="abandoned" style="width:1.5%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -1003,7 +1003,7 @@
 				<p>Hide only the HUD using F1.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.8</span>
+				<span class="updated"><span class="circle"></span> 1.21.10</span>
 			</div>
 		</div>
 		<div class="mod" id="betterf3">
