--- a/mods.html
+++ b/mods.html
@@ -201,17 +201,17 @@
 		<div class="progress">
 			<!--
 				total mods:          75    100.00%
-				updated:             56     74.67%
+				updated:             58     77.33%
 				kind-of updated:     4       5.33%
 				kind-of outdated:    0       0.00%
-				outdated:            14     18.67%
-				abandoned:           1       1.33%
+				outdated:            13     17.33%
+				abandoned:           0       0.00%
 			-->
-			<div class="updated" style="width:75%"></div>
+			<div class="updated" style="width:77.5%"></div>
 			<div class="kindof-updated" style="width:5%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:18.5%"></div>
-			<div class="abandoned" style="width:1.5%"></div>
+			<div class="outdated" style="width:17.5%"></div>
+			<div class="abandoned" style="width:0%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
 		<ul>
@@ -363,18 +363,18 @@
 				<span class="updated"><span class="circle"></span> 1.21.10</span>
 			</div>
 		</div>
-		<div class="mod" id="noisium">
+		<div class="mod" id="noisiumforked">
 			<div class="mod-icon">
-				<img src="https://cdn.modrinth.com/data/KuNKN7d2/6217fb8bc818c19fdd461a5d4e13ffbbbc95db6b.png" />
+				<img src="https://cdn.modrinth.com/data/hasdd01q/6217fb8bc818c19fdd461a5d4e13ffbbbc95db6b_96.webp" />
 			</div>
 			<div class="mod-description">
 				<h3>
-					<a href="https://modrinth.com/mod/noisium" target="_blank">Noisium</a>
+					<a href="https://modrinth.com/mod/noisiumforked" target="_blank">NoisiumForked</a>
 				</h3>
 				<p>Optimises worldgen performance for a better gameplay experience.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.6</span>
+				<span class="updated"><span class="circle"></span> 1.21.10</span>
 			</div>
 		</div>
 		<div class="mod" id="nvidium">
@@ -650,18 +650,18 @@
 				<span class="updated"><span class="circle"></span> 1.21.10</span>
 			</div>
 		</div>
-		<div class="mod" id="modernfix">
+		<div class="mod" id="modernfix-mvus">
 			<div class="mod-icon">
-				<img src="https://cdn.modrinth.com/data/nmDcB62a/e1d2433476995be1b1a94ff1afaf6167752274ae.png" />
+				<img src="https://cdn.modrinth.com/data/TjSm1wrD/e1d2433476995be1b1a94ff1afaf6167752274ae_96.webp" />
 			</div>
 			<div class="mod-description">
 				<h3>
-					<a href="https://modrinth.com/mod/modernfix" target="_blank">ModernFix</a>
+					<a href="https://modrinth.com/mod/modernfix-mvus" target="_blank">ModernFix-mVUS</a>
 				</h3>
 				<p>Improves performance, reduces memory usage, and fixes many bugs.</p>
 			</div>
 			<div class="mod-version">
-				<span class="abandoned"><span class="circle"></span> 1.21.4</span>
+				<span class="updated"><span class="circle"></span> 1.21.10</span>
 			</div>
 		</div>
 		<div class="mod" id="whiteout">
