--- a/mods.html
+++ b/mods.html
@@ -201,16 +201,16 @@
 		<div class="progress">
 			<!--
 				total mods:          76    100.00%
-				updated:             59     77.63%
+				updated:             60     78.95%
 				kind-of updated:     4       5.26%
 				kind-of outdated:    0       0.00%
-				outdated:            13     17.11%
+				outdated:            12     15.79%
 				abandoned:           0       0.00%
 			-->
-			<div class="updated" style="width:78%"></div>
+			<div class="updated" style="width:79%"></div>
 			<div class="kindof-updated" style="width:5%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:17%"></div>
+			<div class="outdated" style="width:16%"></div>
 			<div class="abandoned" style="width:0%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -987,7 +987,7 @@
 				<p>Adds a notepad to the game UI.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.8</span>
+				<span class="updated"><span class="circle"></span> 1.21.10</span>
 			</div>
 		</div>
 		<div class="mod" id="shulker-box-tooltip">
