--- a/mods.html
+++ b/mods.html
@@ -201,16 +201,16 @@
 		<div class="progress">
 			<!--
 				total mods:          75    100.00%
-				updated:             60     80.00%
+				updated:             61     81.33%
 				kind-of updated:     3       4.00%
 				kind-of outdated:    0       0.00%
-				outdated:            12     16.00%
+				outdated:            11     14.67%
 				abandoned:           0       0.00%
 			-->
-			<div class="updated" style="width:80%"></div>
+			<div class="updated" style="width:81%"></div>
 			<div class="kindof-updated" style="width:4%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:16%"></div>
+			<div class="outdated" style="width:15%"></div>
 			<div class="abandoned" style="width:0%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -887,7 +887,7 @@
 				<p>The cape shouldn't be a static slab.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.8</span>
+				<span class="updated"><span class="circle"></span> 1.21.10</span>
 			</div>
 		</div>
 		<h2>Tools</h2>
