--- a/mods.html
+++ b/mods.html
@@ -201,16 +201,16 @@
 		<div class="progress">
 			<!--
 				total mods:          74    100.00%
-				updated:             62     83.78%
+				updated:             63     85.14%
 				kind-of updated:     3       4.05%
 				kind-of outdated:    0       0.00%
-				outdated:            9      12.16%
+				outdated:            8      10.81%
 				abandoned:           0       0.00%
 			-->
-			<div class="updated" style="width:84%"></div>
+			<div class="updated" style="width:85%"></div>
 			<div class="kindof-updated" style="width:4%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:12%"></div>
+			<div class="outdated" style="width:11%"></div>
 			<div class="abandoned" style="width:0%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -476,7 +476,7 @@
 				<p>Implements the OptiFine connected textures format and adds emissive texture support for blocks and items.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.8</span>
+				<span class="updated"><span class="circle"></span> 1.21.10</span>
 			</div>
 		</div>
 		<div class="mod" id="entity-model-features">
