--- a/mods.html
+++ b/mods.html
@@ -201,16 +201,16 @@
 		<div class="progress">
 			<!--
 				total mods:          74    100.00%
-				updated:             63     85.14%
+				updated:             64     86.49%
 				kind-of updated:     3       4.05%
 				kind-of outdated:    0       0.00%
-				outdated:            8      10.81%
+				outdated:            7       9.46%
 				abandoned:           0       0.00%
 			-->
-			<div class="updated" style="width:85%"></div>
+			<div class="updated" style="width:86.5%"></div>
 			<div class="kindof-updated" style="width:4%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:11%"></div>
+			<div class="outdated" style="width:9.5%"></div>
 			<div class="abandoned" style="width:0%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -251,18 +251,18 @@
 				<span class="updated"><span class="circle"></span> 1.21.10</span>
 			</div>
 		</div>
-		<div class="mod" id="enhanced-block-entities">
+		<div class="mod" id="better-block-entities">
 			<div class="mod-icon">
-				<img src="https://cdn-raw.modrinth.com/data/OVuFYfre/icon.png" />
+				<img src="https://cdn.modrinth.com/data/ONZm0H7Y/9813f4e52f3703e6c561233d7fa639c4d24fcf28.png" />
 			</div>
 			<div class="mod-description">
 				<h3>
-					<a href="https://modrinth.com/mod/ebe" target="_blank">Enhanced Block Entities</a>
+					<a href="https://modrinth.com/mod/better-block-entities" target="_blank">Better Block Entities</a>
 				</h3>
 				<p>Reduces lag by rendering block entities as normal blocks.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.4</span>
+				<span class="updated"><span class="circle"></span> 1.21.10</span>
 			</div>
 		</div>
 		<div class="mod" id="entityculling">
@@ -443,7 +443,7 @@
 					<a href="https://modrinth.com/mod/sodium" target="_blank">Sodium</a>
 				</h3>
 				<p>Modern rendering engine.</p>
-				<p>Required by <a href="#iris">Iris</a>, <a href="#nvidium">NVidium</a>, <a href="#reeses-sodium-options">Reese's Sodium Options</a>, and <a href="#sodium-extra">Sodium Extra</a>.</p>
+				<p>Required by <a href="#better-block-entities">Better Block Entities</a>, <a href="#iris">Iris</a>, <a href="#nvidium">NVidium</a>, <a href="#reeses-sodium-options">Reese's Sodium Options</a>, and <a href="#sodium-extra">Sodium Extra</a>.</p>
 			</div>
 			<div class="mod-version">
 				<span class="updated"><span class="circle"></span> 1.21.10</span>
@@ -1169,7 +1169,7 @@
 				<h3>
 					<a href="https://modrinth.com/mod/fabric-api" target="_blank">Fabric API</a>
 				</h3>
-				<p>Required by <a href="#enhanced-block-entities">Enhanced Block Entities</a>, <a href="#locator-heads">Locator Heads</a>, <a href="#locator-lodestones">Locator Lodestones</a>, <a href="#mod-menu">Mod Menu</a>, <a href="#no-chat-reports">No Chat Reports</a>, <a href="#optiboxes">Optiboxes</a>, <a href="#optigui">OptiGUI</a>, <a href="#particle-core">Particle Core</a>, <a href="#particular-reforged">Particular Reforged</a>, <a href="#shulker-box-tooltip">Shulker Box Tooltip</a>, <a href="#smooth-swapping">Smooth Swapping</a>, and <a href="#sodium-dynamic-lights">Sodium Dynamic Lights</a>.</p>
+				<p>Required by <a href="#locator-heads">Locator Heads</a>, <a href="#locator-lodestones">Locator Lodestones</a>, <a href="#mod-menu">Mod Menu</a>, <a href="#no-chat-reports">No Chat Reports</a>, <a href="#optiboxes">Optiboxes</a>, <a href="#optigui">OptiGUI</a>, <a href="#particle-core">Particle Core</a>, <a href="#particular-reforged">Particular Reforged</a>, <a href="#shulker-box-tooltip">Shulker Box Tooltip</a>, <a href="#smooth-swapping">Smooth Swapping</a>, and <a href="#sodium-dynamic-lights">Sodium Dynamic Lights</a>.</p>
 			</div>
 			<div class="mod-version">
 				<span class="updated"><span class="circle"></span> 1.21.10</span>
