--- a/mods.html
+++ b/mods.html
@@ -200,15 +200,15 @@
 		<h2>Compatibility Progress</h2>
 		<div class="progress">
 			<!--
-				total mods:          74    100.00%
-				updated:             67     90.54%
-				kind-of updated:     2       2.70%
+				total mods:          75    100.00%
+				updated:             67     89.33%
+				kind-of updated:     3       4.00%
 				kind-of outdated:    0       0.00%
-				outdated:            5       6.76%
+				outdated:            5       6.67%
 				abandoned:           0       0.00%
 			-->
-			<div class="updated" style="width:90.5%"></div>
-			<div class="kindof-updated" style="width:3%"></div>
+			<div class="updated" style="width:89.5%"></div>
+			<div class="kindof-updated" style="width:4%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
 			<div class="outdated" style="width:6.5%"></div>
 			<div class="abandoned" style="width:0%"></div>
@@ -463,6 +463,20 @@
 			</div>
 			<div class="mod-version">
 				<span class="outdated"><span class="circle"></span> 1.21.6</span>
+			</div>
+		</div>
+		<div class="mod" id="bobby">
+			<div class="mod-icon">
+				<img src="https://cdn.modrinth.com/data/M08ruV16/icon.png" />
+			</div>
+			<div class="mod-description">
+				<h3>
+					<a href="https://modrinth.com/mod/bobby" target="_blank">Bobby</a>
+				</h3>
+				<p>Allows for render distance greater than the server.</p>
+			</div>
+			<div class="mod-version">
+				<span class="kindof-updated"><span class="circle"></span> 1.21.9</span>
 			</div>
 		</div>
 		<div class="mod" id="continuity">
