--- a/mods.html
+++ b/mods.html
@@ -202,15 +202,15 @@
 			<!--
 				total mods:          75    100.00%
 				updated:             67     89.33%
-				kind-of updated:     3       4.00%
+				kind-of updated:     4       5.33%
 				kind-of outdated:    0       0.00%
-				outdated:            5       6.67%
+				outdated:            4       5.33%
 				abandoned:           0       0.00%
 			-->
 			<div class="updated" style="width:89.5%"></div>
-			<div class="kindof-updated" style="width:4%"></div>
+			<div class="kindof-updated" style="width:5.5%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:6.5%"></div>
+			<div class="outdated" style="width:5%"></div>
 			<div class="abandoned" style="width:0%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -462,7 +462,7 @@
 				<p>Implements the OptiFine animated texture format.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.6</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.6</span>
 			</div>
 		</div>
 		<div class="mod" id="bobby">
