--- a/mods.html
+++ b/mods.html
@@ -201,14 +201,14 @@
 		<div class="progress">
 			<!--
 				total mods:          75    100.00%
-				updated:             67     89.33%
-				kind-of updated:     4       5.33%
+				updated:             68     90.66%
+				kind-of updated:     3       4.00%
 				kind-of outdated:    0       0.00%
 				outdated:            4       5.33%
 				abandoned:           0       0.00%
 			-->
-			<div class="updated" style="width:89.5%"></div>
-			<div class="kindof-updated" style="width:5.5%"></div>
+			<div class="updated" style="width:91%"></div>
+			<div class="kindof-updated" style="width:4%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
 			<div class="outdated" style="width:5%"></div>
 			<div class="abandoned" style="width:0%"></div>
@@ -704,7 +704,7 @@
 				<p>Adds sounds for drip particles landing.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.9</span>
+				<span class="updated"><span class="circle"></span> 1.21.10</span>
 			</div>
 		</div>
 		<div class="mod" id="not-enough-animations">
