--- a/mods.html
+++ b/mods.html
@@ -201,16 +201,16 @@
 		<div class="progress">
 			<!--
 				total mods:          74    100.00%
-				updated:             22     29.73%
-				kind-of updated:     1       1.35%
+				updated:             27     36.49%
+				kind-of updated:     0       0.00%
 				kind-of outdated:    0       0.00%
-				outdated:            51     68.92%
+				outdated:            47     63.51%
 				abandoned:           0       0.00%
 			-->
-			<div class="updated" style="width:29.5%"></div>
+			<div class="updated" style="width:36%"></div>
 			<div class="kindof-updated" style="width:1.5%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:69%"></div>
+			<div class="outdated" style="width:64%"></div>
 			<div class="abandoned" style="width:0%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -276,7 +276,7 @@
 				<p>Skips reversed DNS lookup for literal IP addresses.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.10</span>
+				<span class="updated"><span class="circle"></span> 1.21.11</span>
 			</div>
 		</div>
 		<div class="mod" id="ferritecore">
@@ -462,7 +462,7 @@
 				<p>Allows for render distance greater than the server.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.9</span>
+				<span class="updated"><span class="circle"></span> 1.21.11</span>
 			</div>
 		</div>
 		<div class="mod" id="continuity">
@@ -732,7 +732,7 @@
 				<p>Provides realistic sound attenuation, reverberation, and absorption.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.10</span>
+				<span class="updated"><span class="circle"></span> 1.21.11</span>
 			</div>
 		</div>
 		<div class="mod" id="sounds">
@@ -760,7 +760,7 @@
 				<p>Little visual improvements by adding a bunch of new particles.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.10</span>
+				<span class="updated"><span class="circle"></span> 1.21.11</span>
 			</div>
 		</div>
 		<div class="mod" id="wavey-capes">
@@ -1100,7 +1100,7 @@
 				<p>Provides a menu in which to see and configure all mods which you have installed.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.11-pre5</span>
+				<span class="updated"><span class="circle"></span> 1.21.11</span>
 			</div>
 		</div>
 		<div class="mod" id="no-chat-reports">
