--- a/mods.html
+++ b/mods.html
@@ -201,16 +201,16 @@
 		<div class="progress">
 			<!--
 				total mods:          74    100.00%
-				updated:             27     36.49%
+				updated:             28     37.84%
 				kind-of updated:     0       0.00%
 				kind-of outdated:    0       0.00%
-				outdated:            47     63.51%
+				outdated:            46     62.16%
 				abandoned:           0       0.00%
 			-->
-			<div class="updated" style="width:36%"></div>
+			<div class="updated" style="width:38%"></div>
 			<div class="kindof-updated" style="width:0%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:64%"></div>
+			<div class="outdated" style="width:62%"></div>
 			<div class="abandoned" style="width:0%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -560,7 +560,7 @@
 				<p>Allows for custom skyboxes in resource packs.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.10</span>
+				<span class="updated"><span class="circle"></span> 1.21.11</span>
 			</div>
 		</div>
 		<div class="mod" id="sodium-dynamic-lights">
