--- a/mods.html
+++ b/mods.html
@@ -201,16 +201,16 @@
 		<div class="progress">
 			<!--
 				total mods:          74    100.00%
-				updated:             32     43.24%
+				updated:             38     51.35%
 				kind-of updated:     0       0.00%
 				kind-of outdated:    0       0.00%
-				outdated:            42     56.76%
+				outdated:            36     48.65%
 				abandoned:           0       0.00%
 			-->
-			<div class="updated" style="width:43%"></div>
+			<div class="updated" style="width:51%"></div>
 			<div class="kindof-updated" style="width:0%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:57%"></div>
+			<div class="outdated" style="width:49%"></div>
 			<div class="abandoned" style="width:0%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -360,7 +360,7 @@
 				<p>More aggressive block face culling.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.10</span>
+				<span class="updated"><span class="circle"></span> 1.21.11</span>
 			</div>
 		</div>
 		<div class="mod" id="noisiumforked">
@@ -676,7 +676,7 @@
 				<p>Renders player skins in 3D.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.10</span>
+				<span class="updated"><span class="circle"></span> 1.21.11</span>
 			</div>
 		</div>
 		<div class="mod" id="drip-sounds">
@@ -704,7 +704,7 @@
 				<p>Adds missing third-persion animations and modifies others to be better representative.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.10</span>
+				<span class="updated"><span class="circle"></span> 1.21.11</span>
 			</div>
 		</div>
 		<div class="mod" id="particular-reforged">
@@ -774,7 +774,7 @@
 				<p>The cape shouldn't be a static slab.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.10</span>
+				<span class="updated"><span class="circle"></span> 1.21.11</span>
 			</div>
 		</div>
 		<h2>GUI/HUD Improvements</h2>
@@ -1158,7 +1158,7 @@
 				<p>Required by <a href="#drip-sounds">Drip Sounds</a>, <a href="#locator-heads">Locator Heads</a>, <a href="#more-culling">More Culling</a>, <a href="#no-chat-reports">No Chat Reports</a>, <a href="#paginated-advancements">Paginated Advancements</a>, <a href="#sound-physics-remastered">Sound Physics Remastered</a>, <a href="#visuality">Visuality</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.10</span>
+				<span class="updated"><span class="circle"></span> 1.21.11</span>
 			</div>
 		</div>
 		<div class="mod" id="fabric-api">
@@ -1200,7 +1200,7 @@
 				<p>Required by <a href="#particular-reforged">Particular Reforged</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.10</span>
+				<span class="updated"><span class="circle"></span> 1.21.11</span>
 			</div>
 		</div>
 		<div class="mod" id="fzzy-config">
