--- a/mods.html
+++ b/mods.html
@@ -201,16 +201,16 @@
 		<div class="progress">
 			<!--
 				total mods:          74    100.00%
-				updated:             41     55.41%
+				updated:             42     56.76%
 				kind-of updated:     0       0.00%
 				kind-of outdated:    0       0.00%
-				outdated:            33     44.59%
+				outdated:            32     43.24%
 				abandoned:           0       0.00%
 			-->
-			<div class="updated" style="width:55%"></div>
+			<div class="updated" style="width:57%"></div>
 			<div class="kindof-updated" style="width:0%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:45%"></div>
+			<div class="outdated" style="width:43%"></div>
 			<div class="abandoned" style="width:0%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -972,7 +972,7 @@
 				<p>Smoothly scrolls chat, hotbar, creative inventory, etc.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.10</span>
+				<span class="updated"><span class="circle"></span> 1.21.11</span>
 			</div>
 		</div>
 		<div class="mod" id="smooth-swapping">
