--- a/mods.html
+++ b/mods.html
@@ -201,16 +201,16 @@
 		<div class="progress">
 			<!--
 				total mods:          74    100.00%
-				updated:             43     58.11%
+				updated:             46     62.16%
 				kind-of updated:     0       0.00%
 				kind-of outdated:    0       0.00%
-				outdated:            31     41.89%
+				outdated:            28     37.84%
 				abandoned:           0       0.00%
 			-->
-			<div class="updated" style="width:58%"></div>
+			<div class="updated" style="width:62%"></div>
 			<div class="kindof-updated" style="width:0%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:42%"></div>
+			<div class="outdated" style="width:38%"></div>
 			<div class="abandoned" style="width:0%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -234,7 +234,7 @@
 				<p>Optimization mod that focuses on things other than rendering.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.10</span>
+				<span class="updated"><span class="circle"></span> 1.21.11</span>
 			</div>
 		</div>
 		<div class="mod" id="better-block-entities">
@@ -504,7 +504,7 @@
 				<p>Implements the OptiFine random and emissive mob textures format.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.10</span>
+				<span class="updated"><span class="circle"></span> 1.21.11</span>
 			</div>
 		</div>
 		<div class="mod" id="iris">
@@ -1144,7 +1144,7 @@
 				<p>Required by <a href="#better-statistics-screen">Better Statistics Screen</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.10</span>
+				<span class="updated"><span class="circle"></span> 1.21.11</span>
 			</div>
 		</div>
 		<div class="mod" id="cloth-config-api">
