--- a/mods.html
+++ b/mods.html
@@ -201,16 +201,16 @@
 		<div class="progress">
 			<!--
 				total mods:          74    100.00%
-				updated:             49     66.22%
+				updated:             51     68.92%
 				kind-of updated:     0       0.00%
 				kind-of outdated:    0       0.00%
-				outdated:            25     33.78%
+				outdated:            23     31.08%
 				abandoned:           0       0.00%
 			-->
-			<div class="updated" style="width:66%"></div>
+			<div class="updated" style="width:69%"></div>
 			<div class="kindof-updated" style="width:0%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:34%"></div>
+			<div class="outdated" style="width:31%"></div>
 			<div class="abandoned" style="width:0%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -832,7 +832,7 @@
 				<p>Improves the statistics screen.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.10</span>
+				<span class="updated"><span class="circle"></span> 1.21.11</span>
 			</div>
 		</div>
 		<div class="mod" id="blur-plus">
@@ -1256,7 +1256,7 @@
 				<p>Required by <a href="#better-statistics-screen">Better Statistics Screen</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.10</span>
+				<span class="updated"><span class="circle"></span> 1.21.11</span>
 			</div>
 		</div>
 		<div class="mod" id="yetanotherconfiglib">
