--- a/mods.html
+++ b/mods.html
@@ -201,16 +201,16 @@
 		<div class="progress">
 			<!--
 				total mods:          74    100.00%
-				updated:             52     70.27%
+				updated:             53     71.62%
 				kind-of updated:     0       0.00%
 				kind-of outdated:    0       0.00%
-				outdated:            22     29.73%
+				outdated:            21     28.38%
 				abandoned:           0       0.00%
 			-->
-			<div class="updated" style="width:70%"></div>
+			<div class="updated" style="width:72%"></div>
 			<div class="kindof-updated" style="width:0%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:30%"></div>
+			<div class="outdated" style="width:28%"></div>
 			<div class="abandoned" style="width:0%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -532,7 +532,7 @@
 				<p>Implements the OptiFine custom GUI format.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.10</span>
+				<span class="updated"><span class="circle"></span> 1.21.11</span>
 			</div>
 		</div>
 		<div class="mod" id="polytone">
