--- a/mods.html
+++ b/mods.html
@@ -201,16 +201,16 @@
 		<div class="progress">
 			<!--
 				total mods:          74    100.00%
-				updated:             53     71.62%
+				updated:             54     72.97%
 				kind-of updated:     0       0.00%
 				kind-of outdated:    0       0.00%
-				outdated:            21     28.38%
+				outdated:            20     27.03%
 				abandoned:           0       0.00%
 			-->
-			<div class="updated" style="width:72%"></div>
+			<div class="updated" style="width:73%"></div>
 			<div class="kindof-updated" style="width:0%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:28%"></div>
+			<div class="outdated" style="width:27%"></div>
 			<div class="abandoned" style="width:0%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -718,7 +718,7 @@
 				<p>Enhances Minecraft's ambience with hand-crafted visual effects.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.10</span>
+				<span class="updated"><span class="circle"></span> 1.21.11</span>
 			</div>
 		</div>
 		<div class="mod" id="sound-physics-remastered">
