--- a/mods.html
+++ b/mods.html
@@ -201,16 +201,16 @@
 		<div class="progress">
 			<!--
 				total mods:          74    100.00%
-				updated:             56     75.68%
+				updated:             57     77.03%
 				kind-of updated:     0       0.00%
 				kind-of outdated:    0       0.00%
-				outdated:            18     24.32%
+				outdated:            17     22.97%
 				abandoned:           0       0.00%
 			-->
-			<div class="updated" style="width:76%"></div>
+			<div class="updated" style="width:77%"></div>
 			<div class="kindof-updated" style="width:0%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:24%"></div>
+			<div class="outdated" style="width:23%"></div>
 			<div class="abandoned" style="width:0%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -930,7 +930,7 @@
 				<p>Overhauls the advancements screen.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.10</span>
+				<span class="updated"><span class="circle"></span> 1.21.11</span>
 			</div>
 		</div>
 		<div class="mod" id="reeses-sodium-options">
